--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "full-stack",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "build": "npm install --prefix api && npm install --prefix admin && npm run build --prefix admin",
     "start": "npm run start --prefix api"
