--- a/api/package.json
+++ b/api/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.2",
     "@clerk/express": "^1.7.60",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "inngest": "^3.48.1",
     "mongoose": "^8.19.3",
     "nodemon": "^3.1.11"
   }
